[package]
name = "wshmch_test"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
clap = { version = "4.0.18", features = ["derive"] }
gpio = "0.4.1"
i2cdev = "0.5.1"
termios = "0.3.3"
serialport = "4.2.0"
cctalk = "0.2.0"
spidev = "0.5.1"
